<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item1"
        android:icon="@drawable/ic_menu_icon"
        android:title="@string/get_the_avarage"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item2"
        android:icon="@drawable/ic_menu_icon"
        android:title="@string/select_the_number_of_question"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item3"
        android:icon="@drawable/ic_menu_icon"
        android:title="@string/reset_the_saved_result"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item4"
        android:icon="@drawable/ic_menu_icon"
        android:title="@string/edit_question_bank"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/item5"
        android:icon="@drawable/ic_menu_icon"
        android:title="@string/go_to_home_page"
        app:showAsAction="never"
        />
</menu>